--- a/Garage2.0/Views/ParkedVehicles/Create.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Welcome to The Garage</h1>
 
-<h4>ParkedVehicle</h4>
+<h4>Price: $10 per hour</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -47,7 +47,7 @@
                 <input asp-for="ArrivalTime" class="form-control" />
                 <span asp-validation-for="ArrivalTime" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group pt-2">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
