Visa rätt sidor mmm

--- a/Garage2.0/Views/Shared/_Layout.cshtml
+++ b/Garage2.0/Views/Shared/_Layout.cshtml
@@ -19,11 +19,15 @@
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
+                        
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ParkedVehicles" asp-action="Index">Overview</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ParkedVehicles" asp-action="Create">Park</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="ParkedVehicles" asp-action="Index">Home</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ParkedVehicles" asp-action="Overview">Overview</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="ParkedVehicles" asp-action="Index">List</a>
                         </li>
                     </ul>
                 </div>
