--- a/Garage2.0/Views/ParkedVehicles/Overview.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Overview.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model IEnumerable<Garage2._0.Models.ParkedVehicle>
+@model IEnumerable<OverviewViewModel>
 
 @{
     ViewData["Title"] = "Overview";
