--- a/Garage2.0/Views/ParkedVehicles/Edit.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Edit.cshtml
@@ -15,7 +15,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" class="form-control"></select>
+                <select asp-for="Type" asp-items="@Html.GetEnumSelectList<VehicleType>()" class="form-control"></select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
