--- a/Garage2.0/Views/ParkedVehicles/Index.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Index.cshtml
@@ -9,6 +9,15 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+<form asp-action="Filter" asp-controller="ParkedVehicles" method="get">
+    <div class="input-group mb-3">
+        <input type="text" class="form-control" name="title" placeholder="Search on title..." />
+      
+        <div class="input-group-append">
+            <button type="submit" class="btn btn-primary"><i class="fa fa-search">&emsp;Search</i></button>
+        </div>
+    </div>
+</form>
 <table class="table">
     <thead>
         <tr>
