indexVM. Fix med create mm

--- a/Garage2.0/Views/ParkedVehicles/Index.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Garage2._0.Models.ParkedVehicle>
+﻿@using Garage2._0.Models.ViewModels
+@model IEnumerable<IndexViewModel>
 
 @{
     ViewData["Title"] = "Index";
