--- a/Garage2.0/wwwroot/css/site.css
+++ b/Garage2.0/wwwroot/css/site.css
@@ -16,3 +16,14 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+a:hover {
+    background-color: lightgray;
+    cursor: pointer;
+}
+a:active {
+    text-decoration-line:underline;
+}
+a::after{
+    text-decoration-line: underline;
+}
