--- a/Garage2.0/Views/ParkedVehicles/Index.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Index.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>List of all Vehicles</h1>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -15,7 +15,7 @@
         <input type="text" class="form-control" name="title" placeholder="Search on title..." />
       
         <div class="input-group-append">
-            <button type="submit" class="btn btn-primary"><i class="fa fa-search">&emsp;Search</i></button>
+            <button type="submit" class="btn btn-primary ms-2"><i class="fa fa-search">&emsp;Search</i></button>
         </div>
     </div>
 </form>
