--- a/Garage2.0/Views/ParkedVehicles/Index.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Index.cshtml
@@ -1,24 +1,34 @@
-﻿@using Garage2._0.Models.ViewModels
-@model IEnumerable<IndexViewModel>
-
+﻿
+@*@model IEnumerable<IndexViewModel>*@
+@model IEnumerable<ParkedVehicle>
+@*//Vi behöver ParkedVehicle för att få det att funka med sökningen*@
 @{
     ViewData["Title"] = "Index";
 }
 
 <h1>List of all Vehicles</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<form asp-action="Filter" asp-controller="ParkedVehicles" method="get">
-    <div class="input-group mb-3">
-        <input type="text" class="form-control" name="title" placeholder="Search on title..." />
-      
+
+<form>
+    <div class="input-group mb-3 mt-3">
+        <input type="text" class="form-control" name="title" placeholder="Search on Registration Number..." />
+        
         <div class="input-group-append">
-            <button type="submit" class="btn btn-primary ms-2"><i class="fa fa-search">&emsp;Search</i></button>
+            <button asp-action="Filter" asp-controller="ParkedVehicles" type="submit" class="btn btn-primary ms-2"><i class="fa fa-search">&emsp;Search</i></button>
         </div>
+         
+        <div class="input-group-append ms-5">
+            <select class="form-control" name="Type" asp-items="@Html.GetEnumSelectList<VehicleType>()">
+                <option selected="selected" value="">Please select</option>
+            </select>
+        </div>
+        <div class="input-group-append">
+            <button asp-action="FilterType" asp-controller="ParkedVehicles" type="submit" class="btn btn-primary ms-2"><i class="fa fa-search">&emsp;Choose</i></button>
+            </div>
     </div>
 </form>
+
+
 <table class="table">
     <thead>
         <tr>
