--- a/Garage2.0/Views/Shared/_Layout.cshtml
+++ b/Garage2.0/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewData["Title"] - Garage2.0</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Garage2._0.styles.css" asp-append-version="true" />
+   @* <link rel="stylesheet" href="~/Garage2._0.styles.css" asp-append-version="true" />*@
 </head>
 <body>
     <header>
@@ -29,6 +29,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="ParkedVehicles" asp-action="Index">List</a>
                         </li>
+                        
                     </ul>
                 </div>
             </div>
