--- a/Garage2.0/Views/ParkedVehicles/Create.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Welcome to The Garage</h1>
+<h1>Create</h1>
 
-<h4>Price: $10 per hour</h4>
+<h4>ParkedVehicle</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -14,7 +14,7 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" asp-items="@Html.GetEnumSelectList<VehicleType>()" class="form-control"></select>
+                <select asp-for="Type" class="form-control"></select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -42,16 +42,20 @@
                 <input asp-for="NrOfWheels" class="form-control" />
                 <span asp-validation-for="NrOfWheels" class="text-danger"></span>
             </div>
-           
             <div class="form-group">
-                <input type="submit" value="Park" class="btn btn-primary mt-2" />
+                <label asp-for="ArrivalTime" class="control-label"></label>
+                <input asp-for="ArrivalTime" class="form-control" />
+                <span asp-validation-for="ArrivalTime" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">To List</a>
+    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
