--- a/Garage2.0/Views/ParkedVehicles/Edit.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Edit.cshtml
@@ -4,6 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
+ <link rel="stylesheet" href="~/Design/site.css" asp-append-version="true" />
+
 <h1>Edit</h1>
 
 <h4>ParkedVehicle</h4>
