--- a/Garage2.0/Views/ParkedVehicles/Index.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Index.cshtml
@@ -5,17 +5,19 @@
     ViewData["Title"] = "Index";
 }
 
+ <link rel="stylesheet" href="~/Design/site.css" asp-append-version="true" />
+
 <h1>List of all Vehicles</h1>
 
-<p>
+@*<p>
     <a asp-action="Create">Create New</a>
-</p>
+</p>*@
 <form asp-action="Filter" asp-controller="ParkedVehicles" method="get">
     <div class="input-group mb-3">
-        <input type="text" class="form-control" name="title" placeholder="Search on title..." />
+        <input type="text" class="form-control" name="title" placeholder="Search for a vehicle..." />
       
         <div class="input-group-append">
-            <button type="submit" class="btn btn-primary ms-2"><i class="fa fa-search">&emsp;Search</i></button>
+            <button type="submit" class="btn btn-primary ms-2"><i class="fa fa-search">&emsp;Search </i></button>
         </div>
     </div>
 </form>
