--- a/Garage2.0/Views/ParkedVehicles/Receipt.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Receipt.cshtml
@@ -41,21 +41,21 @@
                     <tbody>
                         <tr>
                             <td class="col-sm-2">@Html.DisplayNameFor(model => model.ArrivalTime)</h4></td>
-                            <td class="col-md-1" style="text-align: center"></td>
-                            <td class="col-md-1 text-center"></td>
+                            <td></td>
+                            <td></td>
                             <td class="col-sm-10 text-center">@Html.DisplayFor(model => model.ArrivalTime)</td>
                         </tr>
                         <tr>
                             <td class="col-md-9">@Html.DisplayNameFor(model => model.LeaveTime)</h4></td>
-                            <td class="col-md-1" style="text-align: center"></td>
-                            <td class="col-md-1 text-center"></td>
-                            <td class="col-md-1 text-center">@Html.DisplayFor(model => model.LeaveTime)</td>
+                            <td></td>
+                            <td></td>
+                            <td class="col-md-3 text-center">@Html.DisplayFor(model => model.LeaveTime)</td>
                         </tr>
                         <tr>
-                            <td class="col-md-9"><em>@Html.DisplayNameFor(model => model.TimeParked)</em></h4></td>
+                            <td class="col-md-9">@Html.DisplayNameFor(model => model.TimeParked)</h4></td>
                             <td>    </td>
                             <td>    </td>
-                            <td class="col-md-1 text-center">@Html.DisplayFor(model => model.TimeParked) Hours</td>
+                            <td class="col-md-3 text-center">@Html.DisplayFor(model => model.TimeParked) Hours</td>
                             <!--Kolla hur man kan skriva ut timespan-->
                         </tr>
                         <tr>
