--- a/Garage2.0/Views/ParkedVehicles/Create.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Create.cshtml
@@ -44,7 +44,7 @@
             </div>
            
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" onclick="return confirm('Do you want to park this vehicle {asp-for=RegNR} in the garage?');" class="btn btn-primary" />
             </div>
         </form>
     </div>
