--- a/Garage2.0/Views/ParkedVehicles/Edit.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Edit.cshtml
@@ -45,7 +45,7 @@
             </div>
             
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary" onclick="return confirm('Are you sure you want to edit this vehicle?');" />
             </div>
         </form>
     </div>
@@ -54,6 +54,7 @@
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
