--- a/Garage2.0/Views/ParkedVehicles/Receipt.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Receipt.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-@model Garage2._0.Models.ReceiptViewModel
+﻿@model Garage2._0.Models.ReceiptViewModel
 
 @{
     ViewData["Title"] = "Receipt";
