Fix med titlar, tillbaka-länk, dropdown på de andra sidorna, arrivlatime

--- a/Garage2.0/Views/ParkedVehicles/Details.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Details.cshtml
@@ -3,11 +3,11 @@
 @{
     ViewData["Title"] = "Details";
 }
-
+<a asp-action="Index"><i class="fa fa-chevron-left " style="color:black;"></i></a>
 <h1>Details</h1>
 
 <div>
-    <h4>ParkedVehicle</h4>
+    
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -55,6 +55,6 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary " ><i class="fa fa-pencil" >&emsp;Edit</i></a> 
+    
 </div>
