--- a/Garage2.0/Views/ParkedVehicles/Edit.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Edit.cshtml
@@ -6,9 +6,10 @@
 
  <link rel="stylesheet" href="~/Design/site.css" asp-append-version="true" />
 
+<a asp-action="Index"><i class="fa fa-chevron-left " style="color:black;"></i></a>
 <h1>Edit</h1>
 
-<h4>ParkedVehicle</h4>
+
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -17,7 +18,7 @@
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
-                <select asp-for="Type" class="form-control"></select>
+                 <select asp-for="Type" asp-items="@Html.GetEnumSelectList<VehicleType>()" class="form-control"></select>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -45,21 +46,15 @@
                 <input asp-for="NrOfWheels" class="form-control" />
                 <span asp-validation-for="NrOfWheels" class="text-danger"></span>
             </div>
+       
             <div class="form-group">
-                <label asp-for="ArrivalTime" class="control-label"></label>
-                <input asp-for="ArrivalTime" class="form-control" />
-                <span asp-validation-for="ArrivalTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" onclick="return confirm('Are you sure you want to edit this vehicle?');" />
+                <input type="submit" value="Save" class="btn btn-primary mt-2 " onclick="return confirm('Are you sure you want to edit this vehicle?');" />
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 
 @section Scripts {
