--- a/Garage2.0/Views/ParkedVehicles/Delete.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Delete.cshtml
@@ -3,12 +3,12 @@
 @{
     ViewData["Title"] = "Delete";
 }
-
+<a asp-action="Index"><i class="fa fa-chevron-left " style="color:black;"></i></a>
 <h1>Delete</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>ParkedVehicle</h4>
+  
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
@@ -55,8 +55,8 @@
         </dd>
     </dl>
     
-    <input type="submit" value="Delete" onclick="showModel();" class="btn btn-danger" /> |
-    <a asp-action="Index">Back to List</a>
+    <input type="submit" value="Delete" onclick="showModel();" class="btn btn-danger" /> 
+    @*<a asp-action="Index">Back to List</a>*@
 </div>
 
 
