--- a/Garage2.0/Views/ParkedVehicles/Receipt.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Receipt.cshtml
@@ -6,6 +6,7 @@
 
 
 <div class="container">
+    <a asp-action="Index"><i class="fa fa-chevron-left " style="color:black;"></i></a>
     <div class="row">
         <div class="well col-xs-10 col-sm-10 col-md-6 col-xs-offset-1 col-sm-offset-1 col-md-offset-3">
             <div class="row">
@@ -74,7 +75,7 @@
         </div>
     </div>
 </div>
-<div>
+@*<div>
     <a asp-action="Index">Back to List</a>
-</div>
+</div>*@
 
