--- a/Garage2.0/Views/ParkedVehicles/Delete.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Delete.cshtml
@@ -57,7 +57,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" onclick="showModel(); return false;" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" onclick="showModel(); return true;" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
