--- a/Garage2.0/Views/ParkedVehicles/Edit.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Edit.cshtml
@@ -48,7 +48,7 @@
             </div>
        
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary mt-2 " onclick="return confirm('Are you sure you want to edit this vehicle?');" />
+                <input type="submit" value="Save" class="btn btn-primary mt-2 "  />
             </div>
         </form>
     </div>
