--- a/Garage2.0/Views/ParkedVehicles/Index.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Index.cshtml
@@ -54,7 +54,7 @@
             <th></th>
         </tr>
     </thead>
-    <tbody>
+    <tbody id="indexTable">
 @foreach (var item in Model) {
         <tr>
             <td>
@@ -81,9 +81,45 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a href="#" id="btnDelete" class="btn btn-danger btn-sm" data-id="@item.Id">Check Out</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+
+
+<div id="myModel" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-bs-dismiss="modal">
+                    &times;
+                </button>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div id="postPartial"></div>
+        </div>
+    </div>
+</div>
+
+@section scripts{
+<script type="text/javascript">
+    $(function () {
+        $("body").on('click', '#btnDelete', function () {
+            $("#myModel").modal("hide");
+
+            var id = $(this).attr('data-id');
+ 
+            $.ajax({
+                url: 'PartialDelete',
+                data: { id },
+                success: function (response) {
+                    $("#postPartial").html(response);
+                    $("#myModel").modal("show");
+                }
+            });
+        });
+    });
+</script>
+}
