Popup close, text change

--- a/Garage2.0/Views/Shared/_Layout.cshtml
+++ b/Garage2.0/Views/Shared/_Layout.cshtml
@@ -63,7 +63,7 @@
                             <h2 id="MyModalAlert"> Do you want your receipt?</h2> 
                         </div>
                         <div class="modal-footer">
-                          <button onclick="Form.close()">Ok</button>
+                          <button class="btn btn-success" data-bs-dismiss="modal">Ok</button>
                         </div>
                     </div>
 
