--- a/Garage2.0/Views/ParkedVehicles/PartialDelete.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/PartialDelete.cshtml
@@ -11,10 +11,10 @@
 <div class="modal-footer">
     <form asp-action="Receipt">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Yes" class="btn btn-success" />
+        <input type="submit" value="Checkout with receipt" class="btn btn-success" />
     </form>
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="No" class="btn btn-danger" />
+        <input type="submit" value="Checkout without receipt" class="btn btn-danger" />
     </form>
 </div>
