--- a/Garage2.0/Views/Shared/_Layout.cshtml
+++ b/Garage2.0/Views/Shared/_Layout.cshtml
@@ -61,6 +61,7 @@
                         </div>
                         <div  class="modal-body alert alert-success ">
                             <h2 id="MyModalAlert"> Do you want your receipt?</h2> 
+
                         </div>
                         <div class="modal-footer">
                           <button class="btn btn-success" data-bs-dismiss="modal">Ok</button>
@@ -72,6 +73,20 @@
             </div>
             @RenderBody()
         </main>
+    </div>
+
+    <div id="myModel" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-bs-dismiss="modal">
+                        &times;
+                    </button>
+                    <h4 class="modal-title"></h4>
+                </div>
+                <div id="postPartial"></div>
+            </div>
+        </div>
     </div>
 
     <footer class="containerf" >
