--- a/Garage2.0/Views/ParkedVehicles/Receipt.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Receipt.cshtml
@@ -24,7 +24,7 @@
                 <div class="text-center">
                     <h1>Receipt</h1>
                 </div>
-                </span>
+               
                 <table class="table table-hover">
                     <thead>
                         <tr>
@@ -36,19 +36,19 @@
                     </thead>
                     <tbody>
                         <tr>
-                            <td class="col-sm-2">@Html.DisplayNameFor(model => model.ArrivalTime)</h4></td>
+                            <td class="col-sm-2">@Html.DisplayNameFor(model => model.ArrivalTime)</td>
                             <td></td>
                             <td></td>
                             <td class="col-sm-10 text-center">@Html.DisplayFor(model => model.ArrivalTime)</td>
                         </tr>
                         <tr>
-                            <td class="col-md-9">@Html.DisplayNameFor(model => model.LeaveTime)</h4></td>
+                            <td class="col-md-9">@Html.DisplayNameFor(model => model.LeaveTime)</td>
                             <td></td>
                             <td></td>
                             <td class="col-md-3 text-center">@Html.DisplayFor(model => model.LeaveTime)</td>
                         </tr>
                         <tr>
-                            <td class="col-md-9">@Html.DisplayNameFor(model => model.TimeParked)</h4></td>
+                            <td class="col-md-9">@Html.DisplayNameFor(model => model.TimeParked)</td>
                             <td>    </td>
                             <td>    </td>
                             <td class="col-md-3 text-center">@Html.DisplayFor(model => model.TimeParked) Hours</td>
