--- a/Garage2.0/Views/ParkedVehicles/Delete.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Delete.cshtml
@@ -6,7 +6,7 @@
 <a asp-action="Index"><i class="fa fa-chevron-left " style="color:black;"></i></a>
 <h1>Delete</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Do you want to unpark?</h3>
 <div>
   
     <hr />
@@ -55,7 +55,7 @@
         </dd>
     </dl>
     
-    <input type="submit" value="Delete" onclick="showModel();" class="btn btn-danger" /> 
+    <input type="submit" value="Unpark" onclick="showModel();" class="btn btn-danger" /> 
     @*<a asp-action="Index">Back to List</a>*@
 </div>
 
