--- a/Garage2.0/Views/ParkedVehicles/Delete.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Delete.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Delete";
 }
 <a asp-action="Index"><i class="fa fa-chevron-left " style="color:black;"></i></a>
-<h1>Delete</h1>
+<h1>Unpark</h1>
 
 <h3>Do you want to unpark?</h3>
 <div>
@@ -55,7 +55,7 @@
         </dd>
     </dl>
     
-    <input type="submit" value="Unpark" onclick="showModel();" class="btn btn-danger" /> 
+    <input type="submit" value="Unpark" onclick="showModel();" class="btn btn-danger"style="font-weight: bold">
     @*<a asp-action="Index">Back to List</a>*@
 </div>
 
