--- a/Garage2.0/Views/ParkedVehicles/PartialDetails.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/PartialDetails.cshtml
@@ -56,5 +56,7 @@
 </div>
 
 <div class="modal-footer">
+    
+    <a asp-action="Edit" asp-route-id="@Model?.Id" class="btn btn-primary " ><i class="fa fa-pencil" >&emsp;Edit</i></a> 
     <button class="btn btn-success" data-bs-dismiss="modal">Ok</button>
 </div>
