--- a/Garage2.0/Views/Members/Create.cshtml
+++ b/Garage2.0/Views/Members/Create.cshtml
@@ -1,10 +1,10 @@
 ﻿@model Garage2._0.Models.Member
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "CreateMember";
 }
 
-<h1>Create</h1>
+<h1>Create Member</h1>
 
 <h4>Member</h4>
 <hr />
@@ -27,13 +27,15 @@
                 <input asp-for="PerNr" class="form-control" />
                 <span asp-validation-for="PerNr" class="text-danger"></span>
             </div>
+            <br />
+            
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Register as a member" class="btn btn-success" />
             </div>
         </form>
     </div>
 </div>
-
+<br />
 <div>
     <a asp-action="Index">Back to List</a>
 </div>
