--- a/Garage2.0/Views/Members/Index.cshtml
+++ b/Garage2.0/Views/Members/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Index</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-controller="Members" asp-action="Create">Create New</a>
 </p>
 <table class="table">
     <thead>
@@ -25,6 +25,8 @@
         </tr>
     </thead>
     <tbody>
+
+        
 @foreach (var item in Model) {
         <tr>
             <td>
@@ -45,3 +47,43 @@
 }
     </tbody>
 </table>
+
+@*@section scripts{
+<script>
+
+$(function () {
+    $("body").on('click', '#btnDelete', function () {
+        $("#myModel").modal("hide");
+
+        var id = $(this).attr('data-id');
+ 
+        $.ajax({
+            url: 'PartialDelete',
+            data: { id },
+            success: function (response) {
+                $("#postPartial").html(response);
+                $("#myModel").modal("show");
+            }
+        });
+    });
+});
+
+$(function () {
+    $("body").on('click', '#btnDetails', function () {
+        $("#myModel").modal("hide");
+
+        var id = $(this).attr('data-id');
+ 
+        $.ajax({
+            url: 'PartialDetails',
+            data: { id },
+            success: function (response) {
+                $("#postPartial").html(response);
+                $("#myModel").modal("show");
+            }
+        });
+    });
+});
+</script>
+}
+*@
