--- a/Garage2.0/Views/ParkedVehicles/RegisterCar.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/RegisterCar.cshtml
@@ -1,17 +1,17 @@
 ﻿@model Garage2._0.Models.ParkedVehicle
 
 @{
-    ViewData["Title"] = "Create";
+    ViewData["Title"] = "RegisterCar";
 }
  <link rel="stylesheet" href="~/Design/site.css" asp-append-version="true" />
 <body>
-<h1 class="text-center">Welcome to Our Garage</h1>
+    <h1 class="text-center">Welcome to Our Garage</h1>
 
 <h4 class="text-center">Price: $10 per hour</h4>
 <hr />
-@*<div class="row">
+<div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="RegisterCar">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Type" class="control-label"></label>
@@ -45,35 +45,11 @@
             </div>
           
             <div class="form-group">
-                <input type="submit" value="Park your car" class="btn btn-primary mt-2" />
+                <input type="submit" value="Register your car" class="btn btn-primary mt-2" />
             </div>
         </form>
     </div>
-</div>*@
-
-<div class="row">
-    <div class="col-md-4">
-        <form asp-controller="ParkedVehicles" asp-action="GetVehicle">
-            <div asp-validation-summary="ModelOnly" class="text-success"></div>
-            
-            <div class="form-group">
-                <label asp-for="RegNr" class="control-label"></label>
-                <input asp-for="RegNr" class="form-control" />
-                 <span asp-validation-for="RegNr" class="text-sucsess"></span>
-               
-            </div>
-            
-            
-                <div class="form-group ">
-                    <input   type="submit" value="Park me" style="font-weight: bold" class="btn btn-success mt-2" />
-                </div>
-                   
-        </form>
-        </div>
- </div>
-
-
-
+</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
