--- a/Garage2.0/wwwroot/css/site.css
+++ b/Garage2.0/wwwroot/css/site.css
@@ -74,3 +74,18 @@ a::after{
     width:100%;
     bottom:0;
 }
+
+.btnreg{
+    
+    font-size:medium;
+}
+
+.button1 {
+    padding: 7%;
+    margin-left: 425px;
+   
+}
+.button2 {
+    
+    margin-left:532px;
+}
