--- a/Garage2.0/Views/Shared/_Layout.cshtml
+++ b/Garage2.0/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="ParkedVehicles" asp-action="Index">List</a>
+                            <a class="nav-link text-light" asp-area="" asp-controller="Vehicles" asp-action="Index">List</a>
                         </li>
                         </a>  
                         
