--- a/Garage2.0/Views/Vehicles/Create.cshtml
+++ b/Garage2.0/Views/Vehicles/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage2._0.Models.Vehicle
+﻿@model CreateVehicleViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -12,6 +12,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+         
             <div class="form-group">
                 <label asp-for="RegNr" class="control-label"></label>
                 <input asp-for="RegNr" class="form-control" />
@@ -38,9 +39,22 @@
                 <span asp-validation-for="NrOfWheels" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="MemberId" class="control-label"></label>
-                <select asp-for="MemberId" class ="form-control" asp-items="ViewBag.MemberId"></select>
+                <label asp-for="PerNr" class="control-label"></label>
+                <select asp-for="PerNr" class ="form-control" asp-items="ViewBag.PerNr" ></select>
+              <span asp-validation-for="PerNr" class="text-danger"></span>
+
             </div>
+              <div class="form-group">
+                <label asp-for="Category" class="control-label"></label>
+                <input asp-for="Category" class="form-control" />
+                <span asp-validation-for="Category" class="text-danger"></span>
+            </div>
+              <div class="form-group">
+                <label asp-for="Size" class="control-label"></label>
+                <input asp-for="Size" class="form-control" />
+                <span asp-validation-for="Size" class="text-danger"></span>
+            </div>
+           
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
