--- a/Garage2.0/Views/Vehicles/Details.cshtml
+++ b/Garage2.0/Views/Vehicles/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@model Garage2._0.Models.Vehicle
+﻿@model VehicleDetailsViewModel
 
 @{
     ViewData["Title"] = "Details";
@@ -11,19 +11,16 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.FullName)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.PerNr)
+        </dd>
+          <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.RegNr)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RegNr)
-        </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Color)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Color)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Brand)
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Brand)
@@ -32,20 +29,9 @@
             @Html.DisplayNameFor(model => model.Model)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Model)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NrOfWheels)
-        </dt>
-        <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.NrOfWheels)
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Member)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Member.Id)
-        </dd>
+    
     </dl>
 </div>
 <div>
