--- a/Garage2.0/Views/Vehicles/Edit.cshtml
+++ b/Garage2.0/Views/Vehicles/Edit.cshtml
@@ -1,4 +1,5 @@
-﻿@model Garage2._0.Models.Vehicle
+﻿@using Garage2._0.Models.ViewModels
+@model VehicleEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -38,10 +39,16 @@
                 <input asp-for="NrOfWheels" class="form-control" />
                 <span asp-validation-for="NrOfWheels" class="text-danger"></span>
             </div>
+
             <div class="form-group">
-                <label asp-for="MemberId" class="control-label"></label>
-                <select asp-for="MemberId" class="form-control" asp-items="ViewBag.MemberId"></select>
-                <span asp-validation-for="MemberId" class="text-danger"></span>
+                <label asp-for="Category" class="control-label"></label>
+                <select asp-for="Category" class="form-control"></select>
+                <span asp-validation-for="Category" class="text-danger"></span>
+            </div>
+              <div class="form-group">
+                <label asp-for="Size" class="control-label"></label>
+                <select asp-for="Size" class="form-control"></select>
+                <span asp-validation-for="Size" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
