--- a/Garage2.0/Views/Vehicles/Park.cshtml
+++ b/Garage2.0/Views/Vehicles/Park.cshtml
@@ -1,7 +1,8 @@
-﻿@model Garage2._0.Models.SearchVehicleRegNrViewModel
+﻿
+@model Garage2._0.Models.SearchVehicleRegNrViewModel
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Park";
 }
 
 <h1>Index</h1>
@@ -13,12 +14,12 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-controller="Vehicles" asp-action="GetVehicle">
-            <div asp-validation-summary="ModelOnly" class="text-success"></div>
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
             <div class="form-group">
                 <label asp-for="RegNr" class="control-label"></label>
                 <input asp-for="RegNr" class="form-control" />
-                <span asp-validation-for="RegNr" class="text-sucsess"></span>
+                <span asp-validation-for="RegNr" class="text-danger"></span>
                
             </div>
             
