--- a/Garage2.0/Views/Members/Index.cshtml
+++ b/Garage2.0/Views/Members/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Översikt Medlemmar</h1>
 
 <p>
     <a asp-controller="Members" asp-action="Create">Create New</a>
