--- a/Garage2.0/Views/Vehicles/Create.cshtml
+++ b/Garage2.0/Views/Vehicles/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Createm</h1>
+<h1>Create</h1>
 
 <h4>Vehicle</h4>
 <hr />
@@ -15,9 +15,9 @@
   
             <div class="form-group">
                 <label asp-for="Member" class="control-label"></label>
-                <input asp- asp-for="Member.Name" type="text" class="form-control"/>
-                <input asp- asp-for="Member.Id" type="hidden"/>
-                <span asp-validation-for="Member" class="text-danger"></span>
+               <partial name="_MemberInput" for="Member" />
+
+                <span asp-validation-for="Member.Id" class="text-danger"></span>
             </div>          
             <div class="form-group">
                 <label asp-for="RegNr" class="control-label"></label>
@@ -73,4 +73,6 @@
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="~/js/Member.js"></script>
 }
