--- a/Garage2.0/Views/Vehicles/Park.cshtml
+++ b/Garage2.0/Views/Vehicles/Park.cshtml
@@ -13,7 +13,7 @@
 
 <div class="row">
     <div class="col-md-4">
-        <form asp-controller="Vehicles" asp-action="GetVehicle">
+        <form asp-controller="Vehicles" asp-action="ParkVehicle">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             
             <div class="form-group">
