--- a/Garage2.0/Views/Vehicles/Create.cshtml
+++ b/Garage2.0/Views/Vehicles/Create.cshtml
@@ -7,6 +7,7 @@
 @{
     ViewData["Title"] = "Create";
 }
+ <link rel="stylesheet" href="~/Design/vehicle.css" asp-append-version="true" />
 
 <h1>Register a new car</h1>
 <hr />
@@ -16,10 +17,15 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
   
             <div class="form-group">
-                <label asp-for="Member" class="control-label"></label>
-                <input asp- asp-for="Member.Name" type="text" class="form-control"/>
-                <input asp- asp-for="Member.Id" type="hidden"/>
-                <span asp-validation-for="Member" class="text-danger"></span>
+                <label asp-for="MemberId" class="control-label"></label>
+            <select class="form-control" asp-for="MemberId" asp-items="@await services.GetMembersAsync()">
+                @if (Model is null)
+                 {
+                 <option selected="selected" value="">Choose ID</option>
+
+                 }
+              </select>       
+              <span asp-validation-for="MemberId" class="text-danger"></span>
             </div>          
             <div class="form-group">
                 <label asp-for="RegNr" class="control-label"></label>
@@ -78,5 +84,4 @@
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js" integrity="sha512-uto9mlQzrs59VwILcLiRYeLKPPbS/bT71da/OEBYEwcdNUk8jYIy+D176RYoop1Da+f9mvkYrmj5MCLZWEtQuA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <script src="~/js/Member.js"></script>
 }
