--- a/Garage2.0/Views/Vehicles/Index.cshtml
+++ b/Garage2.0/Views/Vehicles/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Garage2._0.Models.ViewModels
 @model IEnumerable<VehicleIndexViewModel>
+@inject IVehicleTypeService service
 
 @{
     ViewData["Title"] = "Index";
@@ -7,13 +8,12 @@
 
 <h1>Index</h1>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+
+
 <table class="table">
-    <thead>
+    <thead >
         <tr>   
-            <th>
+            <th >
                 @Html.DisplayNameFor(model => model.MemberFullName)
             </th>
               <th>
@@ -33,7 +33,8 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.NrOfWheels)
-            </th>
+            </th> 
+           
            
              
             <th></th>
@@ -62,16 +63,33 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.NrOfWheels)
-            </td>
+            </td> 
+            
           
             
              
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id"class="btn btn-danger btn-sm">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Delete</a>
             </td>
         </tr>
 }
     </tbody>
 </table>
+@section Scripts {
+<script>
+function openSuccessMOdel(strMessage) {
+    var myDiv = document.getElementById("MyModalAlert");
+    myDiv.innerHTML = strMessage;
+    $("#SuccessfulMessage").modal("show");
+   
+};
+$(document).ready(function(){
+    var msg = "@TempData["SuccessMessage"]";
+
+     if (msg) {
+        openSuccessMOdel(msg);
+    }
+});
+</script>}
