--- a/Garage2.0/Views/ParkedVehicles/Create.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Create.cshtml
@@ -5,9 +5,9 @@
 }
  <link rel="stylesheet" href="~/Design/site.css" asp-append-version="true" />
 <body>
-<h1 class="text-center">Welcome to Our Garage</h1>
+<h1 class="heads">Park an existing vehicle</h1>
 
-<h4 class="text-center">Price: $10 per hour</h4>
+<h4 class="heads text-center">Fill in the registration number</h4>
 <hr />
 @*<div class="row">
     <div class="col-md-4">
