--- a/Garage2.0/Views/Vehicles/Index.cshtml
+++ b/Garage2.0/Views/Vehicles/Index.cshtml
@@ -5,10 +5,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 class="heads">List of registered vehicles</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn2 btn-success  style="font-weight: bold">Register a new vehicle</a>
 </p>
 <table class="table">
     <thead>
