--- a/Garage2.0/Views/Members/Edit.cshtml
+++ b/Garage2.0/Views/Members/Edit.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<h1 class="heads">Edit data</h1>
 
 <h4>Member</h4>
 <hr />
@@ -28,16 +28,16 @@
                 <input asp-for="PerNr" class="form-control" />
                 <span asp-validation-for="PerNr" class="text-danger"></span>
             </div>
+            <br />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-success me-2 " style="font-weight: bold " />|
+                <a asp-action="Index" class="btn btn-success me-2" style="font-weight: bold ">Back to List</a>
             </div>
         </form>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
