--- a/Garage2.0/Views/Members/Index.cshtml
+++ b/Garage2.0/Views/Members/Index.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1 class="heads">Overview of existing members</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create" class="btn2 btn-success me-2 " style="font-weight:bold " >Create New Member</a>
 </p>
 <table class="table">
     <thead>
@@ -39,9 +39,9 @@
                 @Html.DisplayFor(modelItem => item.PerNr)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id"  style="font-weight: bold" class="btn btn-success mt-2">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id" style="font-weight: bold" class="btn btn-success mt-2">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id" style="font-weight: bold" class="btn btn-danger mt-2">Delete</a>
             </td>
         </tr>
 }
