--- a/Garage2.0/Views/ParkedVehicles/Home.cshtml
+++ b/Garage2.0/Views/ParkedVehicles/Home.cshtml
@@ -13,8 +13,9 @@
         <div class="text-center ">
            <div class="btn-group btn-group-justified" role="group" >
                <div>
-                <a asp-controller="Vehicles"asp-action="Create" type="button" class="btn btn-success me-2" style="font-weight: bold">REGISTER A NEW CAR</a></div>
-                <a asp-controller="Members" asp-action="Create" type="button" class="btn btn-success me-2" style="font-weight: bold">REGISTER AS A MEMBER</a>
+
+                <a asp-controller="Vehicles"asp-action="Create" type="button" class="btn btn-success me-2" style="font-weight: bold">REGISTER NEW VEHICLE</a></div>
+                <a asp-controller="Members" asp-action="Create" type="button" class="btn btn-success me-2" style="font-weight: bold">REGISTER AS A NEW MEMBER</a>
 
                 <a asp-action="Create" type="button" class="btn btn-success me-2" style="font-weight: bold">PARK</a>
                 <a asp-action="Unpark" type="button" class="btn btn-danger me-2" style="font-weight: bold">UNPARK</a>
