--- a/Garage2.0/Views/Vehicles/ParkingSpaceIndex.cshtml
+++ b/Garage2.0/Views/Vehicles/ParkingSpaceIndex.cshtml
@@ -57,7 +57,11 @@
                 @Html.DisplayFor(modelItem => item.FullName)
             </td>
             <td>
+                @if(item.Occupied == true)
+                {    
                 <a asp-action="Details" asp-route-id="@item.VehicleId" class="btn btn-danger btn-sm">Details</a>
+                <a asp-action="CheckOut" asp-route-id="@item.Id" class="btn btn-danger btn-sm">Check Out</a>
+                }
             </td>
         </tr>
 }
