--- a/Garage2.0/Views/Vehicles/ParkingSpaceIndex.cshtml
+++ b/Garage2.0/Views/Vehicles/ParkingSpaceIndex.cshtml
@@ -9,7 +9,7 @@
 <h1 class="heads">Check parking details here!</h1>
 
 <p>
-    <a asp-action="Create" class="btn2 btn-success style="font-weight: bold">Create New</a>
+    <a asp-action="Park" class="btn2 btn-success style="font-weight: bold">Park a vehicle</a>
 </p>
 <table class="table">
     <thead>
